paks/talkative/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: talkative-$(.gruop)
  labels:
    provider: talkative-$(.group)
spec:
  ports:
  - port: $(.port)
  selector:
    provider: talkative-$(.group)
